src/snapshots/afrotd__parser__tests__rule_html_8.2.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.2.1 Wie erzielt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Touchdown wird erzielt, wenn:
            </p>
            <ol type="a">
                <li>der Ballträger, vom Spielfeld kommend, sich legal im Besitz
                eines Live Balls befindet und der Ball die Fläche der
                gegnerischen Goalline durchbricht. Diese Fläche erstreckt sich
                außerhalb der Pylone nur für einen Ballträger, der den Boden in
                der Endzone oder einen Pylon berührt (A.R. 2.23.1.I und A.R.
                8.2.1.I bis 8.2.1.IX).
                </li>
                <li>ein Spieler einen Vorwärtspass in der gegnerischen Endzone
                fängt (A.R. 5.1.3.I und 5.1.3.II).
                </li>
                <li>in der gegnerischen Endzone ein Fumble oder Rückpass
                recovert, gefangen, abgefangen oder zuerkannt wird (Ausnahmen:
                Regeln 7.2.2.aAusnahme 2, 7.2.5.b und 8.3.2.d.5) (A.R.
                8.2.1.X).
                </li>
                <li>ein Free- oder ein Scrimmage Kick in der gegnerischen
                Endzone legal gefangen oder recovert wird (A.R. 6.3.9.III).
                </li>
                <li>der Referee einen Touchdown nach den Voraussetzungen der
                Regel 9.2.3-Strafe zuerkennt.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.2.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
