src/snapshots/afrotd__parser__tests__rule_html_8.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.3.1 Wie erzielt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Punkt bzw. die Punkte werden gemäß der Punkte-Tabelle in
                Regel 8.1.1 zuerkannt, wenn der Try in einem Down resultiert,
                der unter normalen Umständen einen Touchdown, Safety oder ein
                Fieldgoal erzielt hätte (A.R. 8.3.1.I und 8.3.1.II und A.R.
                8.3.2.I bis 8.3.2.III und 8.3.2.VI und A.R. 10.2.5.X bis
                10.2.5.XV).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
