src/snapshots/afrotd__parser__tests__rule_html_8.3.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.3.2 Gelegenheit zum Punkten
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Try ist die Gelegenheit für eines der Teams, einen oder
                zwei Punkte zu erzielen, während die Game Clock nach einem
                Touchdown angehalten wurde oder in der dritten oder den
                nachfolgenden Extraperioden. Der Try ist ein besonderer Teil im
                Spiel, der nur zum Zweck der Strafdurchführung sowohl einen
                Down als auch den Zeitraum der Ballfreigabe umfasst.
            </p>
            <ol type="a">
                <li>Der Ball muss von dem Team gesnappt werden, das einen
                SechsPunkte-Touchdown erzielt hat. Nach einem Touchdown ist der
                Try vorgeschrieben (Ausnahme: Extraperioden).
                </li>
                <li>Der Try, der ein Scrimmage Down ist, beginnt, wenn der Ball
                freigegeben wird.
                </li>
                <li>Der Snap wird vom Mittelpunkt zwischen den Hash Marks von
                der gegnerischen 3-Meterlinie durchgeführt. Das Team, welches
                den Ball als nächstes ins Spiel bringt, kann einen anderen
                Punkt zwischen den Hash Marks auf oder hinter der gegnerischen
                3-Meterlinie wählen, bevor die Play Clock 25 Sekunden anzeigt
                oder vor der Ballfreigabe. Ist die Play Clock auf oder unter 25
                Sekunden oder nach der Ballfreigabe darf der Ball nur dann
                umplatziert werden, wenn ein Team-Timeout genommen wurde. Dies
                gilt nicht, wenn sich vorher ein Foul durch Team A oder sich
                aufhebende Fouls ereignet haben (Regeln 8.3.3.a und 8.3.3.c.1).
                </li>
                <li>Der Try endet, wenn:
                    <ol type="1">
                        <li>eines der Teams Punkte erzielt.
                        </li>
                        <li>der Ball gemäß der Regel dead wird (A.R. 8.3.2.IV
                        und 8.3.2.VI).
                        </li>
                        <li>eine angenommene Strafe einen Punktgewinn ergibt.
                        </li>
                        <li>eine Strafe gegen Team A einen Downverlust enthält
                        und die Strafe angenommen wird (Regel 8.3.3.c.2).
                        </li>
                        <li>ein Team A-Spieler fumbelt und der Ball von einem
                        anderen Team A-Spieler als dem Fumbler gefangen oder
                        recovert wird. Es gibt keine Punkte für Team A (A.R.
                        8.3.2.VIII).
                        </li>
                    </ol>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.3.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
