src/snapshots/afrotd__parser__tests__rule_html_8.3.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.3.4 Fouls während eines Try nach einem Team Ballbesitzwechsel
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Strafen gegen eines der Teams werden durch die Regel
                aufgehoben (Ausnahme: Strafen für schwere persönliche Fouls,
                Fouls für unsportliches Verhalten, persönliche Dead Ball Fouls
                und Live Ball Fouls, die als Dead Ball Foul behandelt werden,
                werden beim anschließenden Kickoff oder vom Succeeding Spot in
                Extraperioden durchgeführt) (Regel 8.3.5) (A.R. 8.3.4.I und
                8.3.4.II).
                </li>
                <li>Die Punkte von einem Team, das während des Downs ein Foul
                begeht, werden annulliert (A.R. 8.3.2.VII) (Ausnahme: Live Ball
                Fouls, die als Dead Ball Foul behandelt werden).
                </li>
                <li>Wenn beide Teams während des Downs foulen und Team B hatte
                vor dem Team Ballbesitzwechsel nicht gefoult, heben sich die
                Fouls auf, der Down wird nicht wiederholt und der Try ist
                vorüber. (Ausnahme: Strafen für schwere persönliche Fouls,
                Fouls für unsportliches Verhalten, persönliche Dead Ball Fouls
                und Live Ball Fouls, die als Dead Ball Foul behandelt werden,
                werden beim anschließenden Kickoff oder vom Succeeding Spot in
                Extraperioden durchgeführt (siehe Regel 8.3.5)).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.3.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
