src/snapshots/afrotd__parser__tests__rule_html_8.3.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.3.5 Fouls nach einem Try
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Strafen für Fouls, die sich nach einem Try ereignen, werden
                beim nachfolgenden Kickoff oder vom Succeeding Spot bei
                Extraperioden durchgeführt. Wird der Try jedoch wiederholt,
                werden diese Strafen vor der Wiederholung durchgeführt (Regel
                10.1.6) (A.R. 10.2.5.XIII bis 10.2.5.XV und A.R. 3.2.3.VII).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.3.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
