src/snapshots/afrotd__parser__tests__rule_html_8.3.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.3.6 Nächster Down
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Nach einem Try muss der Ball durch einen Kickoff oder am
                Succeeding Spot in Extraperioden ins Spiel gebracht werden. Das
                Team, das den 6-PunkteTouchdown erzielte, muss den Kickoff
                durchführen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.3.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
