src/snapshots/afrotd__parser__tests__rule_html_8.4.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.4.2 Nächster Down
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Erfolgreiches Fieldgoal. Nachdem ein Fieldgoal erzielt
                wurde, muss der Ball durch einen Kickoff oder am Succeeding
                Spot in Extraperioden ins Spiel gebracht werden. Das Team, das
                das Fieldgoal erzielte, muss den Kickoff durchführen.
                </li>
                <li>Erfolgloser Fieldgoalversuch.
                    <ol type="1">
                        <li>Wenn der Ball für dead erklärt wird und, nachdem er
                        die neutrale Zone überquert hat, unberührt von Team B
                        ist, gehört der Ball zu Team B. Ausgenommen in einer
                        Extraperiode bringt Team B den Ball durch einen Snap am
                        Previous Spot ins Spiel, es sei denn, der Previous Spot
                        lag zwischen Team B’s 20 Meterlinie und deren Goalline.
                        In diesem Fall snappt Team B den Ball an seiner
                        20Meterlinie.
                            <ol type="a">
                                <li>Der Snap muss vom Mittelpunkt der
                                20-Meterlinie zwischen den Hash Marks
                                durchgeführt werden, es sei denn, vor der
                                Ballfreigabe wählt Team B eine andere Position
                                auf oder zwischen den Hash Marks.
                                </li>
                                <li>Nach der Ballfreigabe kann der Ball nach
                                einem gewährten Team-Timeout an einen anderen
                                Punkt gelegt werden, es sei denn, dem Timeout
                                gingen ein Team A-Foul oder sich aufhebende
                                Fouls voraus.
                                </li>
                            </ol>
                        </li>
                        <li>Wenn der Ball die neutrale Zone nicht überquert
                        oder wenn Team B den Ball berührt, nachdem dieser die
                        neutrale Zone überquert hat, gelten die allgemeinen
                        Regeln bezüglich Scrimmage Kicks (A.R. 6.3.4.II, A.R.
                        8.4.2.I bis 8.4.2.VI und A.R. 10.2.3.V).
                        </li>
                        <li>Wenn der Ball die neutrale Zone überquert,
                        unberührt von Team B ist, nachdem er die neutrale Zone
                        überquert hat, und hinter der neutralen Zone für dead
                        erklärt wird, gelten die allgemeinen Regeln bezüglich
                        Scrimmage Kicks (A.R. 8.4.2.VII).
                        </li>
                    </ol>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.4.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
